--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   ],
   "private": true,
   "dependencies": {
-    "@types/react": "^16.9.44",
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
@@ -19,7 +18,8 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "react-tooltip": "^4.2.7"
+    "react-tooltip": "^4.2.7",
+    "typescript": "^3.9.7"
   },
   "repository": {
     "type": "git",
@@ -46,5 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react": "^16.9.44"
+  }
 }
