--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
@@ -13,9 +10,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "react-useportal": "^1.0.13"
+    "react-useportal": "^1.0.13",
+    "uuid": "^8.3.0"
   },
   "repository": {
     "type": "git",
