--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
+    "emoji-mart": "^3.0.0",
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "node-sass": "^4.13.1",
