--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-tooltip": "^4.2.7",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
     "react-useportal": "^1.0.13",
     "uuid": "^8.3.0"
   },
