Change App and User states to Redux store

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-tooltip": "^4.2.7",
+    "redux": "^4.0.5",
     "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
