--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   ],
   "private": true,
   "dependencies": {
-    "bulma": "^0.9.0",
     "classnames": "^2.2.6",
     "emoji-mart": "^3.0.0",
     "lodash": "^4.17.15",
@@ -19,9 +18,10 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-tabs": "^3.1.1",
     "react-tooltip": "^4.2.7",
-    "typescript": "^3.9.7",
     "react-useportal": "^1.0.13",
+    "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
   "repository": {
