--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   ],
   "private": true,
   "dependencies": {
+    "class-transformer": "^0.3.1",
     "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "node-sass": "^4.13.1",
@@ -20,6 +22,7 @@
     "react-scripts": "^3.4.1",
     "react-tooltip": "^4.2.7",
     "redux": "^4.0.5",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
