--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   ],
   "private": true,
   "dependencies": {
-    "class-transformer": "^0.3.1",
     "classnames": "^2.2.6",
-    "immutable": "^4.0.0-rc.12",
+    "detect-browser": "^5.1.1",
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "node-sass": "^4.13.1",
@@ -22,7 +21,6 @@
     "react-scripts": "^3.4.1",
     "react-tooltip": "^4.2.7",
     "redux": "^4.0.5",
-    "reflect-metadata": "^0.1.13",
     "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
@@ -52,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.44"
+    "@types/react": "^16.9.44",
+    "@types/react-redux": "^7.1.9"
   }
 }
