--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "private": true,
   "dependencies": {
+    "@types/react-transition-group": "^4.4.0",
     "classnames": "^2.2.6",
     "emoji-mart": "^3.0.0",
     "lodash": "^4.17.15",
@@ -21,6 +22,7 @@
     "react-scripts": "^3.4.1",
     "react-tabs": "^3.1.1",
     "react-tooltip": "^4.2.7",
+    "react-transition-group": "^4.4.1",
     "react-useportal": "^1.0.13",
     "typescript": "^3.9.7",
     "uuid": "^8.3.0"
