--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^3.4.1",
     "react-tabs": "^3.1.1",
     "react-tooltip": "^4.2.7",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "typescript": "^3.9.7",
     "uuid": "^8.3.0"
