Add screen sharing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-react-template",
+  "name": "proximo",
   "version": "0.1.0",
   "contributors": [
     "Aniket Singh <aniketsingh0104@gmail.com>",
