--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   ],
   "private": true,
   "dependencies": {
+    "@sentry/apm": "^5.21.3",
+    "@sentry/react": "^5.21.3",
     "classnames": "^2.2.6",
     "detect-browser": "^5.1.1",
     "emoji-mart": "^3.0.0",
